--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+    <link rel="stylesheet" href="main.css">
     <title></title>
 </head>
 <body>
-
+    <canvas id="game">
+        
+    </canvas>
+    <script src="main.js"></script>
 </body>
 </html>
