--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="main.css">
+    <script type="text/javascript" src="input.js"></script>
     <title></title>
 </head>
 <body>
